--- a/style/styles.css
+++ b/style/styles.css
@@ -50,7 +50,7 @@ body{
     justify-content: center;
     align-items: center;
     align-self: center;
-    margin-right: .5rem;
+    margin-right: 1rem;
 }
 
 .welcomeAndTimerDiv{
