--- a/style/styles.css
+++ b/style/styles.css
@@ -210,11 +210,32 @@ align-content: center;
 .taskHeader{
     width: min-content;
     display: flex;
-    margin-left: 4rem;
+    margin-left: 1rem;
     padding: 0.5rem;
     border-radius: 6px;
     text-wrap-mode: nowrap;
     color: var(--primary);
+}
+
+#addTaskButton{
+    display: flex;
+    width: 4rem;
+    height: 2.5rem;
+    border-radius: 1.5rem;
+    background-color: var(--onyx);
+    box-shadow: 0px 0px .6rem var(--white);
+    justify-content: center;
+    align-items: center;
+    align-self: center;
+    margin-left: auto;
+    margin-right: 2rem;
+    border: 1px solid var(--white);
+    font-size: 2rem;
+}
+#addTaskButton:hover{
+    background-color: var(--primary);
+    cursor: pointer;
+    box-shadow: 0px 0px 20px var(--white);
 }
 
 .settingsDiv{
@@ -312,7 +333,8 @@ align-content: center;
     margin-left: 1rem;
     width: max-content;
     align-self: flex-start;
-
+    position: relative;
+    top: 0.65rem;
 }
 
 .taskItemDetailsDiv{
@@ -326,7 +348,7 @@ align-content: center;
     display: flex;
     font-size: 0.8rem;
     align-self: flex-end;
-    margin-left: 20rem;
+    margin-left: 25rem;
 }
 
 .taskItemPriorityDiv{
