--- a/style/styles.css
+++ b/style/styles.css
@@ -31,6 +31,7 @@ body{
     margin-bottom: 1rem;
     background-color: var(--window);
     padding: 0.5rem;
+    padding-top: 1.25rem;
     border-radius: 1.5rem;
 }
 
